# gvb_server/routers/user_router.go
@@ -2,6 +2,7 @@ package routers
 
 import (
 	"gvb_server/api"
+	"gvb_server/middleware"
 
 	"github.com/gin-gonic/gin"
 )
@@ -9,5 +10,8 @@ import (
 func UserRouter(router *gin.RouterGroup) {
 	userApis := api.ApiGroupApp.UserApi
 	router.POST("/email_login", userApis.EmailLoginView)
-	router.GET("/users", userApis.UserListView)
+	//只有登录的用户才能调用用户信息列表
+	router.GET("/users", middleware.JwtAuth(), userApis.UserListView)
+	router.PUT("/user_role",middleware.JwtAdmin(),userApis.UserUpdateRoleView)
+	router.PUT("/user_pwd",middleware.JwtAuth(),userApis.UserUpdatePasswordView)
 }
